--- a/index.html
+++ b/index.html
@@ -8,56 +8,78 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="topNavBar clearfix">
-    <a class="logo" href="#" alt="logo0">
-      <span class="rs">RS</span><span class="card">card</span>
-    </a>
-    <ul class="nav clearfix">
-      <li><a href="#">关于</a></li>
-      <li><a href="#">技能</a></li>
-      <li><a href="#">作品</a></li>
-      <li><a href="#">博客</a></li>
-      <li><a href="#">联系方式</a></li>
-      <li><a href="#">其他</a></li>
-      <li><a href="#">日历</a></li>
-    </ul>
+  <div class="topNavBar">
+    <div class="topNavBar-inner clearfix">
+      <a class="logo" href="#" alt="logo0">
+        <span class="rs">RS</span><span class="card">card</span>
+      </a>
+      <ul class="nav clearfix">
+        <li><a href="#">关于</a></li>
+        <li><a href="#">技能</a></li>
+        <li><a href="#">作品</a></li>
+        <li><a href="#">博客</a></li>
+        <li><a href="#">联系方式</a></li>
+        <li><a href="#">其他</a></li>
+        <li><a href="#">日历</a></li>
+      </ul>
+    </div>
   </div>
 
-  <div class="banner"></div>
+  <div class="banner">
+    <div class="mask"></div>
+  </div>
 
   <main>
-    <div class="card">
-      <div class="pictureAndText">
+    <div class="userCard">
+      <div class="pictureAndText clearfix">
         <div class="picture">
-          <img src="#" alt="头像">
+          <img src="./images/avatar.jpg" width="299" alt="头像">
         </div>
         <div class="text">
-          <div class="profile">
-            <span class="welcome">Hello</span>
-            <h1>洛克萨斯</h1>
-            <p>前端开发工程师</p>
-            <hr>
-            <dl>
-              <dt>年龄</dt>
-              <dd>18</dd>
-              <dt>所在城市</dt>
-              <dd>北京</dd>
-              <dt>邮箱</dt>
-              <dd>fangyinghang@foxmail.com</dd>
-              <dt>手机</dt>
-              <dd>13812345678</dd>
-            </dl>
-          </div>
+          <span class="welcome">Hello, welcome
+            <span class="triangle"></span>
+          </span>
+          <h1>菲兹</h1>
+          <p>前端开发工程师</p>
+          <hr>
+          <dl class="clearfix">
+            <dt>年龄</dt>
+            <dd>18</dd>
+            <dt>所在城市</dt>
+            <dd>北京</dd>
+            <dt>邮箱</dt>
+            <dd>feizi@foxmail.com</dd>
+            <dt>手机</dt>
+            <dd>13812345678</dd>
+          </dl>
         </div>
       </div>
       <footer class="media">
-        <a href="#"><img src="#" alt="..."></a>
-        <a href="#"><img src="#" alt="..."></a>
-        <a href="#"><img src="#" alt="..."></a>
-        <a href="#"><img src="#" alt="..."></a>
-        <a href="#"><img src="#" alt="..."></a>
-        <a href="#"><img src="#" alt="..."></a>
-        <a href="#"><img src="#" alt="..."></a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-github"></use>
+          </svg>
+        </a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-youxiang"></use>
+          </svg>
+        </a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-qq"></use>
+          </svg>
+        </a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-juejin"></use>
+          </svg>
+        </a>
+        <a href="#">
+          <svg class="icon" aria-hidden="true">
+            <use xlink:href="#icon-jianshu"></use>
+          </svg>
+          </a>
       </footer>
     </div>
     <a class="button" href="#">下载 PDF 简历</a>
@@ -95,5 +117,6 @@
     </div>
   </section>
   
+  <script src="//at.alicdn.com/t/font_828378_5psgk7e2gve.js"></script>
 </body>
 </html>
