--- a/index.html
+++ b/index.html
@@ -12,19 +12,35 @@
   <div id="siteWelcome" class="site-welcome active">
     <div class="loading"></div>
   </div>
-  <div class="topNavBar">
+  <div id="topNavBar" class="topNavBar">
     <div class="topNavBar-inner clearfix">
       <a class="logo" href="#" alt="logo0">
         <span class="rs">RS</span><span class="card">card</span>
       </a>
       <ul class="nav clearfix">
-        <li><a href="#">关于</a></li>
-        <li><a href="#">技能</a></li>
-        <li><a href="#">作品</a></li>
-        <li><a href="#">博客</a></li>
-        <li><a href="#">联系方式</a></li>
-        <li><a href="#">其他</a></li>
-        <li><a href="#">日历</a></li>
+        <li>
+          <a href="#siteAbout">关于</a>
+        </li>
+        <li>
+          <a href="#siteSkills">技能</a>
+        </li>
+        <li>
+          <a href="#siteWorks">作品</a>
+          <ul class="submenu">
+            <li>所有作品</li>
+            <li>框架作品</li>
+            <li>原生作品</li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">博客</a>
+        </li>
+        <li>
+          <a href="#">联系方式</a>
+        </li>
+        <li>
+          <a href="#">其他</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -34,7 +50,7 @@
   </div>
 
   <main>
-    <div class="userCard">
+    <div id="siteAbout" class="userCard">
       <div class="pictureAndText clearfix">
         <div class="picture">
           <img src="./images/avatar.jpg" width="299" alt="头像">
@@ -96,7 +112,7 @@
     </p>
   </main>
 
-  <section class="skill">
+  <section id="siteSkills" class="skill">
     <h2>技能</h2>
     <ol class="clearfix">
       <li>
@@ -138,7 +154,7 @@
     </ol> 
   </section>
 
-  <section class="showreel">
+  <section id="siteWorks" class="showreel">
     <h2>作品</h2>
     <nav>
       <ol class="clearfix">
@@ -176,10 +192,6 @@
   </section>
   
   <script src="//at.alicdn.com/t/font_828378_5psgk7e2gve.js"></script>
-  <script>
-    setTimeout(function(){
-      siteWelcome.classList.remove('active')
-    }, 2000)
-  </script>
+  <script src="./main.js"></script>
 </body>
 </html>
