--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div id="siteWelcome" class="site-welcome active">
+  <!-- <div id="siteWelcome" class="site-welcome active">
     <div class="loading"></div>
-  </div>
+  </div> -->
   <div id="topNavBar" class="topNavBar">
     <div class="topNavBar-inner clearfix">
       <a class="logo" href="#" alt="logo0">
@@ -50,7 +50,7 @@
   </div>
 
   <main>
-    <div id="siteAbout" class="userCard">
+    <div data-x id="siteAbout" class="userCard">
       <div class="pictureAndText clearfix">
         <div class="picture">
           <img src="./images/avatar.jpg" width="299" alt="头像">
@@ -112,7 +112,7 @@
     </p>
   </main>
 
-  <section id="siteSkills" class="skill">
+  <section data-x id="siteSkills" class="skill">
     <h2>技能</h2>
     <ol class="clearfix">
       <li>
@@ -154,7 +154,7 @@
     </ol> 
   </section>
 
-  <section id="siteWorks" class="showreel">
+  <section data-x id="siteWorks" class="showreel">
     <h2>作品</h2>
     <nav>
       <ol class="clearfix">
@@ -192,6 +192,7 @@
   </section>
   
   <script src="//at.alicdn.com/t/font_828378_5psgk7e2gve.js"></script>
+  <script src="//cdn.bootcss.com/tween.js/r14/Tween.min.js"></script>
   <script src="./main.js"></script>
 </body>
 </html>
